--- a/latex/explicit_pde_solutions.tex
+++ b/latex/explicit_pde_solutions.tex
@@ -17,6 +17,9 @@
 %\label{sec:validation}
 
 
+with the goal of solving coupled fluid flows modelling the physics (?) in the interior of the earth. We require both advective terms and diffusive terms. The components of a good pressure fluid solver are explicit and implicit differentiation. Whether we solve a steady-state PDE implicitly or a hyperbolic PDE with an implicit time-scheme, we require an \emph{implicit solver}. An implicit solver is nothing but a method of assembling a differentiation matrix, forcing terms on the RHS and then solving the linear system. A direct LU factorization would suffice if our system is dense, but with RBF-FD the system is sparse. Sparse systems can be efficiently solved under the right conditions through sparse iterative solvers. :
+
+
 
 %\subsection{CVT epsilon tests}
 %
